refactor model; remove batch functionality from 'Session'

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,7 @@ include_package_data = true
 python_requires = >=3.7
 install_requires =
     numpy
-    jupyter
+    tqdm
 
 [options.extras_require]
 dev =
@@ -33,3 +33,5 @@ dev =
     coverage
     pylint
     sphinx-rtd-theme
+    matplotlib
+    jupyter
