add makefile and pre-commit hooks (black, isort, pycln)

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,7 +31,9 @@ dev =
     pytest-cov
     pytest-mock
     coverage
+    isort
     pylint
+    pycln
     sphinx-rtd-theme
     matplotlib
     jupyter
