--- a/.pylintrc
+++ b/.pylintrc
@@ -157,7 +157,7 @@ disable=raw-checker-failed,
         arguments-differ,
         trailing-comma-tuple,
         wrong-import-order,
-        fixme
+        fixme,
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -503,7 +503,7 @@ ignore-imports=yes
 ignore-signatures=yes
 
 # Minimum lines number of a similarity.
-min-similarity-lines=4
+min-similarity-lines=10
 
 
 [SPELLING]
