--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,3 @@
 [pytest]
-addopts = --doctest-modules --ignore=api/core/namespace.py --cov=api
+; namespace.py throws an error during doctest
+addopts = --ignore=api/core/namespace.py
