--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,6 +22,7 @@ repos:
     - id: pycln
       name: pycln
       entry: pycln
+      exclude: ^tests/
 - repo: https://github.com/pycqa/isort
   rev: 5.12.0
   hooks:
@@ -50,8 +51,8 @@ repos:
       entry: pylint
       language: system
       types: [python]
+      exclude: ^tests/
       args:
-        - api/
         - -rn
         - -sn
         - --rcfile=.pylintrc
