--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,11 @@ python_requires = >=3.7
 install_requires =
     numpy
     tqdm
+    joblib
+    celery
+    fastapi
+    pydantic
+    uvicorn
 
 [options.extras_require]
 dev =
