fix py3.7 compatibility for the Celery

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,9 @@ install_requires =
     fastapi
     pydantic
     uvicorn
+    # temporary solution for python 3.7 compatibility
+    # see https://github.com/python/importlib_metadata/issues/411
+    importlib-metadata<5.0
 
 [options.extras_require]
 dev =
