--- a/setup.cfg
+++ b/setup.cfg
@@ -23,15 +23,20 @@ include_package_data = true
 python_requires = >=3.7
 install_requires =
     numpy
+    python-dotenv
     tqdm
     joblib
     celery
+    flower
     fastapi
     pydantic
     uvicorn
     # temporary solution for python 3.7 compatibility
     # see https://github.com/python/importlib_metadata/issues/411
     importlib-metadata<5.0
+    # fix Celery's AttributeError: 'DisabledBackend' object has
+    # no attribute '_get_task_meta_for'
+    redis
 
 [options.extras_require]
 dev =
