--- a/setup.cfg
+++ b/setup.cfg
@@ -22,13 +22,17 @@ packages = find:
 include_package_data = true
 python_requires = >=3.7
 install_requires =
+    # Core
     numpy
-    python-dotenv
     tqdm
     joblib
+    python-dotenv
+    Pillow
+    # API
     celery
     flower
     fastapi
+    python-multipart
     pydantic
     uvicorn
     # temporary solution for python 3.7 compatibility
