test endpoints; move `celery_service` files to `v1` folder

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,12 +44,13 @@ install_requires =
 
 [options.extras_require]
 dev =
-    black
-    pre-commit
     pytest
     pytest-cov
     pytest-mock
     coverage
+    pre-commit
+    httpx
+    black
     isort
     pylint
     pycln
