--- a/setup.cfg
+++ b/setup.cfg
@@ -29,12 +29,13 @@ install_requires =
     python-dotenv
     Pillow
     # API
+    python-multipart
     celery
     flower
     fastapi
-    python-multipart
     pydantic
     uvicorn
+    asynclog
     # temporary solution for python 3.7 compatibility
     # see https://github.com/python/importlib_metadata/issues/411
     importlib-metadata<5.0
