--- a/.pylintrc
+++ b/.pylintrc
@@ -377,8 +377,7 @@ min-public-methods=0
 [EXCEPTIONS]
 
 # Exceptions that will emit a warning when caught.
-overgeneral-exceptions=builtins.BaseException,
-                       builtins.Exception
+overgeneral-exceptions=builtins.BaseException
 
 
 [FORMAT]
