--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,16 +29,15 @@ services:
     ports:
       - "6379:6379"
 
-#  # CELERY BROKER
-#  rabbitmq:
-#    build: api/rabbitmq_service/
-#    container_name: rabbitmq-broker
-#    env_file: .env
-#    networks:
-#      - production-boilerplate
-#    ports:
-#      - "5672:5672"
-#      - "15672:15672"
+  # CELERY BROKER
+  rabbitmq:
+    image: rabbitmq:3-alpine
+    container_name: rabbitmq-broker
+    networks:
+      - local
+    ports:
+      - "5672:5672"
+      - "15672:15672"
 
   # CELERY WORKER
   celery:
@@ -52,6 +51,7 @@ services:
       - .:/app
     depends_on:
       - redis
+      - rabbitmq
 
   # CELERY MONITOR
   flower:
@@ -66,7 +66,6 @@ services:
     ports:
       - "5555:5555"
     depends_on:
-      - redis
       - celery
 
 networks:
