--- a/setup.cfg
+++ b/setup.cfg
@@ -23,38 +23,37 @@ include_package_data = true
 python_requires = >=3.7
 install_requires =
     # Core
-    numpy
-    tqdm
-    joblib
-    python-dotenv
-    Pillow
+    numpy==1.23.1
+    tqdm==4.65.0
+    joblib==1.2.0
+    python-dotenv==1.0.0
+    Pillow==9.4.0
     # API
-    python-multipart
-    celery
-    flower
-    fastapi
-    pydantic
-    uvicorn
-    asynclog
+    celery==5.2.7
+    flower==1.2.0
+    fastapi==0.95.1
+    pydantic==1.10.7
+    uvicorn==0.21.1
+    asynclog==0.1.7
+    python-multipart==0.0.6
     # temporary solution for python 3.7 compatibility
     # see https://github.com/python/importlib_metadata/issues/411
     importlib-metadata<5.0
     # fix Celery's AttributeError: 'DisabledBackend' object has
     # no attribute '_get_task_meta_for'
-    redis
+    redis==4.5.4
 
 [options.extras_require]
 dev =
-    pytest
-    pytest-cov
-    pytest-mock
-    coverage
-    pre-commit
-    httpx
-    black
-    isort
-    pylint
-    pycln
-    sphinx-rtd-theme
-    matplotlib
-    jupyter
+    pytest==7.2.1
+    pytest-cov==4.0.0
+    pytest-mock==3.10.0
+    coverage==7.2.3
+    pre-commit==3.2.2
+    httpx==0.24.0
+    black==23.3.0
+    isort==5.12.0
+    pylint==2.17.2
+    pycln==2.1.3
+    sphinx-rtd-theme==1.2.0
+    jupyter==1.0.0
