--- a/setup.cfg
+++ b/setup.cfg
@@ -23,11 +23,8 @@ include_package_data = true
 python_requires = >=3.7
 install_requires =
     # Core
-    numpy==1.23.1
+    numpy==1.21.6
     tqdm==4.65.0
-    joblib==1.2.0
-    python-dotenv==1.0.0
-    Pillow==9.4.0
     # API
     celery==5.2.7
     flower==1.2.0
@@ -36,6 +33,9 @@ install_requires =
     uvicorn==0.21.1
     asynclog==0.1.7
     python-multipart==0.0.6
+    joblib==1.2.0
+    python-dotenv==0.21.1
+    Pillow==9.4.0
     # temporary solution for python 3.7 compatibility
     # see https://github.com/python/importlib_metadata/issues/411
     importlib-metadata<5.0
@@ -49,11 +49,11 @@ dev =
     pytest-cov==4.0.0
     pytest-mock==3.10.0
     coverage==7.2.3
-    pre-commit==3.2.2
     httpx==0.24.0
     black==23.3.0
-    isort==5.12.0
-    pylint==2.17.2
+    isort==5.11.5
+    pylint==2.15.0
     pycln==2.1.3
     sphinx-rtd-theme==1.2.0
     jupyter==1.0.0
+    pre-commit
